<resources>
    <string name="app_name">F1_app</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_drivers">Drivers</string>
    <string name="title_team">Teams</string>
    <string name="title_history">History</string>
    <string name="latest_results">Latest results</string>
    <string name="next_races">Next races</string>
    <string name="formula_1_app">Formula 1 App</string>
    <string name="hubert_dziedziura">Hubert Dziedziura</string>
    <string name="start">START</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="error_fetching">Fetching error</string>
    <string name="full_standings"><u>Show full standings</u></string>
    <string name="season">Season %1$s</string>
    <string name="title_information">Information</string>
    <string name="title_results">Results</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nationality">Nationality</string>
    <string name="world_championships">World Championships</string>
    <string name="wins">Wins</string>
    <string name="grand_prix">Grand Prix</string>
    <string name="points">Points</string>
    <string name="team_name">Team Name</string>
    <string name="first_race">First Race</string>
    <string name="map">Map</string>
    <string name="information">Information</string>
    <string name="first_grand_prix">First Grand Prix</string>
    <string name="lap_record">Lap record</string>
</resources>