<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_tab"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule_tab"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_drivers_tab"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_drivers" />

    <item
        android:id="@+id/navigation_team_tab"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/title_team" />

    <item
        android:id="@+id/navigation_history_tab"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history" />

</menu>