<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.f1_app.presentation.viewmodels.raceDetails.RaceDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gp_name"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{vm.raceName}"
                tools:text="Bahrain Grand Prix"
                android:textSize="26sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/circuit_name"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{vm.circuitName}"
                tools:text="Bahrain International Circuit"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gp_name"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                app:cardCornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/circuit_name"
                app:layout_constraintTop_toTopOf="@id/gp_name">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/country_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/usa"
                    imageUrl="@{vm.image}"/>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/map"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            imageUrl="@{vm.map}"
            android:layout_marginVertical="16dp"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_first_gp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_grand_prix"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_first_gp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.firstGp}"
            tools:text="2004"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_lap_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lap_record"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_lap_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.fastestLap}"
            tools:text="1:31:223"
            android:textColor="@color/white"
            android:textSize="24sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>